// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> given the user is authenticated renders correctly 1`] = `
<nav
  class="Header navbar navbar-light"
>
  <a
    class="navbar-brand"
    href="/"
  >
    Home
  </a>
  <ul
    class="nav navbar-nav"
  >
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/signout"
      >
        Sign Out
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<Header/> given the user is not authenticated renders correctly 1`] = `
<nav
  class="Header navbar navbar-light"
>
  <a
    class="navbar-brand"
    href="/"
  >
    Home
  </a>
  <ul
    class="nav navbar-nav"
  >
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/signin"
      >
        Sign in
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/signup"
      >
        Sign up
      </a>
    </li>
  </ul>
</nav>
`;
